# internal/models/user.go
@@ -9,3 +9,9 @@ type User struct {
 	Name      string `gorm:"not null"`
 	CreatedAt time.Time
 }
+
+// ProfileUpdateRequest используется для обновления профиля
+type ProfileUpdateRequest struct {
+	Name     string `json:"name" example:"Иван"`
+	Password string `json:"password" example:"secret123"`
+}
