# internal/routes/auth.go
@@ -1,14 +1,0 @@
-package routes
-
-import (
-	"github.com/MarBalueva/dashboard_efficiency/internal/controllers"
-	"github.com/gin-gonic/gin"
-)
-
-func AuthRoutes(r *gin.Engine) {
-	auth := r.Group("/auth")
-	{
-		auth.POST("/register", controllers.Register)
-		auth.POST("/login", controllers.Login)
-	}
-}
