# internal/routes/routes.go
@@ -1,7 +1,6 @@
 package routes
 
 import (
-	"github.com/MarBalueva/dashboard_efficiency/internal/api"
 	"github.com/MarBalueva/dashboard_efficiency/internal/controllers"
 	"github.com/MarBalueva/dashboard_efficiency/internal/middleware"
 	"github.com/gin-gonic/gin"
@@ -17,9 +16,12 @@ func Register(r *gin.Engine) {
 	apiGroup := r.Group("/api")
 	apiGroup.Use(middleware.AuthMiddleware())
 	{
-		apiGroup.GET("/health", api.GetHealth)
-		apiGroup.GET("/employees", api.ListEmployees)
-		apiGroup.POST("/employees", api.CreateEmployee)
+		apiGroup.GET("/employees", controllers.ListCurrentUserEmployees)
 		apiGroup.POST("/upload", controllers.UploadEmployees)
+		apiGroup.POST("/upload/confirm", controllers.ConfirmUpload)
+		apiGroup.GET("/profile", controllers.GetProfile)
+		apiGroup.PUT("/profile", controllers.UpdateProfile)
+		dashboard := apiGroup.Group("/dashboard")
+		dashboard.GET("/summary", controllers.DashboardSummary)
 	}
 }
